--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <div class="d-flex flex-column flex-md-row justify-content-between">
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px"> Tableau</p>
-                                <div class="progress" style="height: 20px; width: 300px">
+                                <div class="progress" style="height: 20px">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50  "
                                         aria-valuemin="0" aria-valuemax="100">50% </div>
                                 </div>
@@ -321,7 +321,7 @@
 
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px">VS Code</p>
-                                <div class="progress" style="height: 20px; width: 300px ">
+                                <div class="progress" style="height: 20px ">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75  "
                                         aria-valuemin="0" aria-valuemax="100">75% </div>
                                 </div>
@@ -329,7 +329,7 @@
 
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px">Ecrin/Saphir</p>
-                                <div class="progress" style="height: 20px; width: 300px ">
+                                <div class="progress" style="height: 20px ">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75  "
                                         aria-valuemin="0" aria-valuemax="100">75% </div>
                                 </div>
