--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px">Comsol</p>
                                 <div class="progress mb-5" style="height: 20px ">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50  " aria-valuemin="0"
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100">50% </div>
                                 </div>
                             </div>
@@ -283,8 +283,8 @@
                         </div>
                     </ul>
 
-                    <ul class="list-inline ">
-                        <div class="d-flex flex-column flex-md-row justify-content-between ">
+                    <ul class="list-inline  mb-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px"> Anaconda</p>
                                 <div class="progress mb-5" style="height: 20px ">
@@ -301,7 +301,7 @@
                             </div>
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px"> Microsoft Office Package</p>
-                                <div class="progress" style="height: 20px ">
+                                <div class="progress mb-5" style="height: 20px ">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75  "
                                         aria-valuemin="0" aria-valuemax="100">75% </div>
                                 </div>
@@ -309,11 +309,11 @@
                         </div>
                     </ul>
 
-                    <ul class="list-inline  ">
+                    <ul class="list-inline">
                         <div class="d-flex flex-column flex-md-row justify-content-between">
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px"> Tableau</p>
-                                <div class="progress" style="height: 20px">
+                                <div class="progress mb-5" style="height: 20px">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50  "
                                         aria-valuemin="0" aria-valuemax="100">50% </div>
                                 </div>
@@ -321,7 +321,7 @@
 
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px">VS Code</p>
-                                <div class="progress" style="height: 20px ">
+                                <div class="progress mb-5" style="height: 20px ">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75  "
                                         aria-valuemin="0" aria-valuemax="100">75% </div>
                                 </div>
@@ -329,16 +329,13 @@
 
                             <div class="flex-grow-1 ms-4 me-5" style="text-align: justify">
                                 <p style="width: 300px">Ecrin/Saphir</p>
-                                <div class="progress" style="height: 20px ">
+                                <div class="progress mb-5" style="height: 20px ">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75  "
                                         aria-valuemin="0" aria-valuemax="100">75% </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </ul>
-
                     
                 </div>
             </section>
