--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     <div class="subheading mb-5" style="text-transform:none">
                         TEHRAN · IRAN · (+98)9183605719 · M.f.13751214@gmail.com   
                     </div>
-                    <p class="lead mb-5" style="text-align: justify">I am currently pursuing graduate studies in the field of petroleum engineering (reservoir branch) in Master of Science
-                    at Amirkabir University of Technology. I'm looking toward new opportunities and challenges to assert myself and make use
-                    of the theories of different courses that I have learned in actual work.
-                    Reservoir characterization and hydrogeology (with respect to uncertainty quantification) are actually the topics that I
-                    found my interest in, so I am trying my best to broaden my knowledge surrounding this area and integrate it with
-                    computer science, especially machine learning.</p>
+                    <p class="lead mb-5" style="text-align: justify">I have recently completed my graduate studies in the field of petroleum engineering (reservoir branch) in Master of
+                    Science at Amirkabir University of Technology. I'm looking toward new opportunities and challenges to assert myself and
+                    make use of the theories of different courses that I have learned in actual work. Reservoir characterization and
+                    hydrogeology (with respect to uncertainty quantification) are actually the topics that I found my interest in, so I am
+                    trying my best to broaden my knowledge surrounding this area and integrate it with computer science, especially machine
+                    learning.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/mohammad-fathy-057162187/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/m1997f" target="_blank"><i class="fab fa-github"></i></a>
@@ -75,7 +75,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3">Amirkabir University of Technology</div>
-                            <p style="text-align: justify">Working as a teaching assistant for Petroleum Engineering Department at Amirkabir University of Technology.</p>
+                            <p style="text-align: justify">Working as a teaching assistant in Oil & Gas Reservoir Engineering course for the Petroleum Engineering Department
+                            at Amirkabir University of Technology. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
@@ -84,8 +85,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Researcher</h3>
                             <div class="subheading mb-3">Iran's National Elites Foundation </div>
-                            <p style="text-align: justify">As a team member (creating software related to matrix acidizing for National Iranian Oil Refining and Distribution
-                            Company), I've been responsible for developing the graphical user interface(GUI) of this software.</p>
+                            <p style="text-align: justify">As a team member (creating software related to matrix acidizing for researching porpuses in future works), I was
+                            responsible for developing this graphical user interface(GUI) software. I used Tkinter Library in Python programming
+                            language to create the desired app.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Octoober 2020 - September2021</span></div>
                     </div>
@@ -104,8 +106,7 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Research Institute Of Enhanced Oil
-                            Recovery</h3>
+                            <h3 class="mb-0">PETROLEUM ENGINEERING LABORATORY</h3>
                             <div class="subheading mb-3">SUMMER INTERN, Tehran</div>
                             <p style="text-align: justify">Taking part in laboratory experiments and closely observing the procedure of core cleaning steps and finally core
                             flooding and calculating permeability and porosity, also, working with the software which compiles the data of geology,
@@ -336,7 +337,7 @@
                             </div>
                         </div>
                     </ul>
-                    
+
                 </div>
             </section>
             <hr class="m-0" />
