--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                                 Amirkabir University of Technology (AUT), Iran) 
                             </p>
                             <p><strong>GPA</strong>: 18.68 out of 20.</p>
+                            <a href="./transcripts/M.Sc. Transcript.pdf" rel="noopener" target="_blank"><strong>Download my M.Sc.
+                                    Transcript</strong></a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2019 - March 2022</span></div>
                     </div>
@@ -589,7 +591,7 @@
                                 <li>Online course offered by Andrei Neagoie (Zero To Mastery)</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2022</span></div>
                     </div>
                     
                 </div>
