--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                     </div>  
 
                                     <div class="col-lg-6">
-                                        <table>
+                                        <table class="skills">
                                             <tr>
                                                 <td>Python </td>
                                                 <td class="circle">⚫⚫⚫⚫⚪</td>
@@ -382,8 +382,6 @@
                                                 <td class="circle">⚫⚫⚫⚫⚪</td>
                                             </tr>
                                 
-
-                                            
                                         </table> 
                                     </div>
                                 </div>
