--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certification">Certification</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certification">publication</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publication">publication</a></li>
                 </ul>
             </div>
         </nav>
@@ -738,6 +738,70 @@
                         <div class="flex-shrink-0"><span class="text-primary">February 2022</span></div>
                     </div>
                     
+                </div>
+            </section>
+
+
+
+            <!-- <section class="resume-section" id="Certification">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certification & Courses</h2> -->
+
+
+            <hr class="m-0" />
+            <!-- Publication -->
+            <section class="resume-section" id="Publication">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publication</h2>
+                    <div class="d-flex flex-column flex-md-row  justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <!-- <h3>Book Chapter</h3>
+                            <ul>
+                                <li style="font-weight: bold;">Sustainability in Natural Gas Reservoir Drilling: A Review on Environmentally and Economically 
+                                    Friendly Fluids and Optimal Waste Management
+                                </li>
+                                <ul>
+                                    <li style="font-weight: normal; list-style-type:square">DOI: 
+                                        <a 
+                                            href="https://doi.org/10.1016/B978-0-12-824495-1.00008-5 " 
+                                            rel="noopener" target="_blank">https://doi.org/10.1016/B978-0-12-824495-1.00008-5 
+                                        </a>
+                                    </li>
+                                </ul>
+                            </ul> -->
+                            <!-- <br/> -->
+                            <h3>Conference Paper</h3>
+                            <h4 
+                                style='color:gray; font-weight: normal; text-transform: capitalize; '> Iranian National Congress of Chemical Engineering– 2021 Sep
+                            </h4>
+                            <ul>
+                                <li style="font-weight: bold;">
+                                    Prediction of porosity distribution by using boltzmann machine
+                                </li>
+                                <ul style="list-style-type:square">
+                                    <li>
+                                        Link: 
+                                        <a href="https://civilica.com/doc/1378217" 
+                                            rel="noopener" target="_blank">https://civilica.com/doc/1378217/
+                                        </a>
+                                    </li>
+                                </ul>
+                                <li style="font-weight: bold;">
+                                    Linear modeling of acidizing operation with regard to dispersion effects
+                                </li>
+                                <ul style="list-style-type:square">
+                                    <li>
+                                        Link: 
+                                        <a href="https://civilica.com/doc/1378216/" rel="noopener"
+                                         target="_blank">https://civilica.com/doc/1378216/ 
+
+                                        </a>
+                                    </li>
+                                </ul>
+                                
+                            </ul>
+                        </div>
+                    </div>   
                 </div>
             </section>
  
