--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Reasearcher and Data Analyst</h3>
+                            <h3 class="mb-0">Researcher and Data Analyst</h3>
                             <div class="subheading mb-3">Research Institute of Petroleum Industry (RIPI) · Full-time</div>
                             <ul style="list-style-type:square">
                                 <li>
