--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="subheading mb-3">Amirkabir University Of Technology,
                             Tehran, Iran</div>
                             <p style="text-align:justify"><strong>Thesis Title</strong>: Uncertainty quantification in reservoir modeling with the help of machine learning</p>
-                            <p style="text-align:justify"><strong>Supervisor</strong>: Dr. Mohammad Ahmadi (Assistant professor at Petroleum Engineering Department,
+                            <p style="text-align:justify"><strong>Supervisor</strong>: Dr. Mohammad Ahmadi (Associate professor at Petroleum Engineering Department,
                                 Amirkabir University of Technology (AUT), Iran) 
                             </p>
                             <p><strong>GPA</strong>: 18.68 out of 20.</p>
@@ -156,7 +156,7 @@
                             </ul>
                             <p style="text-align:justify"><strong>Thesis Title</strong>: Linear modeling of acidizing operation with regard to
                             dispersion effects</p>
-                            <p style="text-align:justify"><strong>Supervisor</strong>: Dr. Mohammad Ahmadi (Assistant professor at Petroleum Engineering Department,
+                            <p style="text-align:justify"><strong>Supervisor</strong>: Dr. Mohammad Ahmadi (Associate professor at Petroleum Engineering Department,
                                 Amirkabir University of Technology (AUT), Iran) 
                             </p>
                             <p><strong>GPA</strong>: 18.87 out of 20.</p>
