--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <span class="text-primary" style="text-transform:none">Fathy</span>
                     </h1>
                     <div class="subheading mb-5" style="text-transform:none">
-                        TEHRAN · IRAN · (+98)9183605719 · M.f.13751214@gmail.com   
+                        TEHRAN · IRAN · (+98)9183605719 · Mohammad.fathy9775@gmail.com   
                     </div>
                     <p class="lead mb-5" style="text-align: justify">As a petroleum engineering professional with experience in data science, machine learning, and uncertainty quantification, my commitment to the environment has driven me to explore the intersection of climate change and energy solutions. I have a keen interest in geological sequestration, safely storing carbon dioxide and hydrogen underground. I am dedicated to developing innovative strategies that mitigate environmental impact while meeting energy demands sustainably. By integrating hydrological insights into my work, I aim to create comprehensive and eco-conscious solutions for a cleaner energy future. Let's collaborate and make a positive impact together.</p>
                     <div class="social-icons">
@@ -80,12 +80,9 @@
                                 <li>
                                     Research on Oil and Gas Leakage Phenomenon: Causes, Detection Methods, and Prevention Strategies.
                                 </li>
-                                <li>
-                                    Quantitative and Qualitative Assessment of Gas Hydrate Resources in the Oman Sea
-                                </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Octoober 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Octoober 2022 - Present</span></div>
                     </div>
 
 
