--- a/index.html
+++ b/index.html
@@ -767,19 +767,19 @@
                                 </ul>
                             </ul> -->
                             <!-- <br/> -->
-                            <h3>Conference Paper</h3>
+                            <h3>Published</h3>
                             <h4 
-                                style='color:gray; font-weight: normal; text-transform: capitalize; '> Iranian National Congress of Chemical Engineering– 2021 Sep
+                                style='color:gray; font-weight: normal; text-transform: capitalize; '> Uncertainty quantification of reservoir performance using machine learning algorithms and structured expert judgment - Dec 2023
                             </h4>
                             <ul>
                                 <li style="font-weight: bold;">
-                                    Prediction of porosity distribution by using boltzmann machine
+                                    Energy journal 
                                 </li>
                                 <ul style="list-style-type:square">
                                     <li>
                                         Link: 
-                                        <a href="https://civilica.com/doc/1378217" 
-                                            rel="noopener" target="_blank">https://civilica.com/doc/1378217/
+                                        <a href="https://doi.org/10.1016/j.energy.2023.129906" 
+                                            rel="noopener" target="_blank">https://doi.org/10.1016/j.energy.2023.129906
                                         </a>
                                     </li>
                                 </ul>
