--- a/index.html
+++ b/index.html
@@ -75,10 +75,19 @@
                             <div class="subheading mb-3">Research Institute of Petroleum Industry (RIPI) · Full-time</div>
                             <ul style="list-style-type:square">
                                 <li>
-                                    Developing software for Well Integrity Management System. 
+                                    Developing software for Well Integrity Management System (WIMS). 
                                 </li>
                                 <li>
                                     Research on Oil and Gas Leakage Phenomenon: Causes, Detection Methods, and Prevention Strategies.
+                                </li>
+                                <li>
+                                    Analyzing large datasets to identify trends and patterns by using machine learning algorithms.
+                                </li>
+                                <li>
+                                    Organizing large data files and categorizing them in excel documents.
+                                </li>
+                                <li>
+                                    Worked as member of integrated project team in highly collaborative work environment.
                                 </li>
                             </ul>
                         </div>
@@ -149,7 +158,7 @@
                             <div class="subheading mb-3">Amirkabir University Of Technology,
                             Tehran, Iran</div>
                             <ul style="list-style-type:square">
-                                <li>In 2015 I took part in "Konkoor" which is Iran's nationwide entrance exam of universities (ranked 1541 between 181846 participants). </li>
+                                <li>In 2015 I took part in Iran's nationwide entrance exam of universities (ranked 1541 between 181846 participants). </li>
                             </ul>
                             <p style="text-align:justify"><strong>Thesis Title</strong>: Linear modeling of acidizing operation with regard to
                             dispersion effects</p>
@@ -368,7 +377,7 @@
                                             </tr>
                                             <tr>
                                                 <td>CMG</td>
-                                                <td class="circle">⚫⚫⚫⚫⚪</td>
+                                                <td class="circle">⚫⚫⚫⚪⚪</td>
                                             </tr>
                                             <tr>
                                                 <td>VS Code</td>
@@ -490,7 +499,7 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                CO<sub>2</sub> Sequestration
+                                CO<sub>2</sub> and H<sub>2</sub> storage
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -499,6 +508,22 @@
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Geoscience
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Well Integrity
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Reservoir simulation and modeling
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                Porous media transport phenomena
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                 Subsurface fluid flow
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
