--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                CO<sub>2</sub> and H<sub>2</sub> storage
+                                Hydrogen and carbon dioxide storage
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
