--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Octoober 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2022 - March 2024</span></div>
                     </div>
 
 
